manifests/on-prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ext
  name: ingress-tu-frontend-service
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
    nginx.ingress.kubernetes.io/configuration-snippet : |
      if ($request_uri ~* \.(css|gif|jpe?g|png|webp|pdf|ico)) {
        expires 1M;
        add_header Cache-Control "max-age=900, public";
      }
  labels:
    name: "tu-frontend"
spec:
  ingressClassName: nginx
  rules:
    - host: preview.tokenutility.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: tu-frontend-svc
                port:
                  number: 3000
